name:                rest-client
version:             0.1.0.0
synopsis:            RESTful API client library
-- description:         
homepage:            http://github.com/fpco/rest-client
license:             BSD3
license-file:        LICENSE
author:              John Wiegley
maintainer:          johnw@fpcomplete.com
-- copyright:           
category:            Network
build-type:          Simple
cabal-version:       >=1.10

extra-html-files:    docs/*.graffle

library
  default-language:  Haskell2010
  exposed-modules:     Network.REST.Client
                     , Network.REST.Tutorial
  -- other-modules:       
  build-depends:       base              >= 4.5
                     , aeson             >= 0.6.1.0
                     , attempt           >= 0.4.0
                     , base64-bytestring >= 1.0.0.0
                     , blaze-builder     >= 0.3.1.0
                     , bytestring        >= 0.9
                     , case-insensitive  >= 0.4.0.4
                     , conduit           >= 0.5
                     , containers        >= 0.4.2.1
                     , data-default      >= 0.5.0
                     , data-marshal      >= 0.1
                     , failure           >= 0.2.0.1
                     , http-conduit      >= 1.8.5
                     , http-types        >= 0.7
                     , lens              >= 3.7.1.2
                     , network           >= 2.4.0.1
                     , parallel          >= 3.2.0.3
                     , path-pieces       >= 0.1.2
                     , shakespeare-text  >= 1.0.0.5
                     , tagged            >= 0.4.4
                     , text              >= 0.11
                     , transformers      >= 0.3

Test-suite github
  default-language:  Haskell2010
  type: exitcode-stdio-1.0
  main-is: GitHub.hs
  hs-source-dirs: test
  build-depends:       base >=3
                     , rest-client
                     , aeson             >= 0.6.1.0
                     , attempt           >= 0.4.0
                     , base64-bytestring >= 1.0.0.0
                     , bytestring        >= 0.9
                     , conduit           >= 0.5
                     , data-default      >= 0.5.0
                     , data-marshal      >= 0.1
                     , http-conduit      >= 1.8.5
                     , network           >= 2.4.0.1
                     , shakespeare-text  >= 1.0.0.5
                     , tagged            >= 0.4.4
                     , text              >= 0.11
                     , transformers      >= 0.3
